[package]
name = "psx-sem"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Sizemore <nathanrsizemore@gmail.com>"]
description = "POSIX semaphores."
readme = "README.md"
keywords = ["posix", "shared", "memory", "ipc", "semaphore", "sem"]
license = "MPL-2.0"
repository = "https://github.com/nathansizemore/psx-shm"
documentation = "https://docs.rs/psx-shm/"

[dependencies]
bitflags = "2.0"
libc = "0.2"
